--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@ a:hover {
   <p style="color: green; font-weight: bold;"><em>DOWNLOAD TO PRINT</em></p>
 
   <p>
-    <a href="https://docs.google.com/document/d/1WW8L61PjwVBDTt1kA4EmL9yeXHkQT2hP/edit?tab=t.0" style="color: blue; font-weight: bold;">
+    <a href="#" style="color: blue; font-weight: bold;">
       Student Teaching Responsibilities and Requirements
     </a>
   </p>
