added links and updated

--- a/index.html
+++ b/index.html
@@ -272,12 +272,12 @@ a:hover {
     <div style="flex: 1; min-width: 280px;">
       <h3 style="color: red;">Instruction, Observation, and Evaluation Schedule</h3>
       <ul>
-        <li><a href="https://docs.google.com/document/d/1D4KVZ0rJBXDL4umiad-UH2zQ6S7EJq_C/edit?tab=t.0#heading=h.ei14bzqb96zr" style="color: blue;">AYA/SPED/MUSIC 16 week schedule</a></li>
-        <li><a href="https://docs.google.com/document/d/1PSJu3hpXDHXjcEerBdZKU3Leob1idq84/edit?tab=t.0#heading=h.lmuinf1umrj2" style="color: blue;">MCE/ELIS//ART 8 week schedule</a></li>
+        <li><a href="https://drive.google.com/file/d/1K1LvKv7fK19kSYho7jiuKC_4H71A8QjY/view?usp=sharing" style="color: blue;">AYA/SPED/MUSIC 16 week schedule</a></li>
+        <li><a href="https://drive.google.com/file/d/16nD-QRwAq4VP413rGJso5tc-NOfXVjNA/view?usp=sharing" style="color: blue;">MCE/ELIS//ART 8 week schedule</a></li>
       </ul>
 
       <ul>
-        <li><a href="https://docs.google.com/document/d/1YrN94Rk_eUKcYUovvHa0wpLRDkWdIEcp/edit?tab=t.0#heading=h.gjdgxs" style="color: blue;">Student Teaching Dress Code</a></li>
+        <li><a href="https://drive.google.com/file/d/10ROBU9mTjob9trg7PzYzUk3edklLYKMv/view?usp=sharing" style="color: blue;">Student Teaching Dress Code</a></li>
         <li><a href="https://drive.google.com/file/d/1b7vZ_cx_zyqTtiVPA5dcNVxbfXOshx4d/view?usp=sharing" style="color: blue;">Student Teaching Policies</a></li>
       </ul>
     </div>
@@ -366,7 +366,7 @@ a:hover {
         <ul>
           <li>Mon., October 13 — 3:00-5:00pm</li>
           <li>Tue., November 11— 7:15-8:00am</li>
-          <li>Mon., Decmeber 1 — 3:00-5:00pm</li>
+          <li>Mon., December 1 — 3:00-5:00pm</li>
         </ul>
         <p>Other times available by appointment, email:<br>
           <a href="mailto:takightlinger@ysu.edu" style="color: blue;">takightlinger@ysu.edu</a>
@@ -390,9 +390,9 @@ a:hover {
         <li><a href="https://drive.google.com/file/d/1EPAqkm_LFCeWBp8W-LXnbz_uy8apseAN/view" style="color: blue;">CT Responsibilities</a></li>
         <li><a href="https://drive.google.com/file/d/1mPqoribrNMXnACObatzOQh4Urxi-7kOu/view" style="color: blue;">CT Checklist</a></li>
         <li><a href="https://drive.google.com/file/d/1fGHKtMW7riWJ6ffd07HvNk6pbAPCYuBD/view" style="color: blue;">Mentoring Compensation</a></li>
-        <li><a href="https://drive.google.com/file/d/1gsr1RJ51LazTng2ONbPiUW0RkTPE838d/view" style="color: blue;">Guidelines for Student Teaching handbook</a></li>
+        <li><a href="" style="color: blue;">Guidelines for Student Teaching handbook</a></li>
         <li>
-          <a href="https://drive.google.com/file/d/1doav1TEs9OIdeMTmEwwrUTAL_OdZR33f/view style=" style="color: blue;" >Outstanding Performance Award Form</a><br>
+          <a href="https://drive.google.com/file/d/1doav1TEs9OIdeMTmEwwrUTAL_OdZR33f/view" style="color: blue;" >Outstanding Performance Award Form</a><br>
             
             <p style="color: red; font-weight: bold;"> Due November 17, 2025 by 4:00pm</p>
           </a>
@@ -404,8 +404,8 @@ a:hover {
     <div style="flex: 1; min-width: 280px;">
       <h3 style="color: darkorange;">Observation Evaluation Schedule</h3>
       <ul>
-        <li><a href="https://docs.google.com/document/d/1PSJu3hpXDHXjcEerBdZKU3Leob1idq84/edit?tab=t.0#heading=h.lmuinf1umrj2" style="color: blue;">MCE/ELIS/ART: 8 week schedule</a></li>
-        <li><a href="https://docs.google.com/document/d/1D4KVZ0rJBXDL4umiad-UH2zQ6S7EJq_C/edit?tab=t.0#heading=h.ei14bzqb96zr" style="color: blue;">AYA/SPED/MUSIC: 16 week schedule</a></li>
+        <li><a href="https://drive.google.com/file/d/16nD-QRwAq4VP413rGJso5tc-NOfXVjNA/view?usp=sharing" style="color: blue;">MCE/ELIS/ART: 8 week schedule</a></li>
+        <li><a href="https://drive.google.com/file/d/1K1LvKv7fK19kSYho7jiuKC_4H71A8QjY/view?usp=sharing" style="color: blue;">AYA/SPED/MUSIC: 16 week schedule</a></li>
         <li><a href="https://drive.google.com/file/d/1B4vAwGAfApaIuHp2bux6zG5iSxrwYUgg/view" style="color: blue;">Observation Form</a></li>
       </ul>
     </div>
@@ -424,8 +424,8 @@ a:hover {
     <div style="flex: 1; min-width: 300px;">
       <h3 style="color: darkorange;">Observation and Evaluation Schedule</h3>
       <ul>
-        <li>MCE/ELIS/ART: <a href="https://docs.google.com/document/d/1PSJu3hpXDHXjcEerBdZKU3Leob1idq84/edit?tab=t.0#heading=h.lmuinf1umrj2" style="color: blue;">8 week schedule</a></li>
-        <li>AYA/SPED/MUSIC: <a href="https://docs.google.com/document/d/1D4KVZ0rJBXDL4umiad-UH2zQ6S7EJq_C/edit?tab=t.0#heading=h.ei14bzqb96zr" style="color: blue;">16 week schedule</a></li>
+        <li>MCE/ELIS/ART: <a href="https://drive.google.com/file/d/16nD-QRwAq4VP413rGJso5tc-NOfXVjNA/view?usp=sharing" style="color: blue;">8 week schedule</a></li>
+        <li>AYA/SPED/MUSIC: <a href="https://drive.google.com/file/d/1K1LvKv7fK19kSYho7jiuKC_4H71A8QjY/view?usp=sharing" style="color: blue;">16 week schedule</a></li>
         <li><a href="" style="color: blue;">Guidelines for Student Teaching handbook</a></li>
       </ul>
 
@@ -439,8 +439,8 @@ a:hover {
     <div style="flex: 1; min-width: 280px;">
       <h3 style="color: darkorange;">Checklists</h3>
       <ul>
-        <li><a href="https://docs.google.com/document/d/11BoTpTIZqMuOASkM3eNoif2mww9BtzVF/edit?tab=t.0" style="color: blue;">8 week checklist</a></li>
-        <li><a href="https://docs.google.com/document/d/1tkFiUSUH1CW_yMuQwIMnDkU0AT0H-Ujq/edit?tab=t.0 " style="color: blue;">16 week checklist</a></li>
+        <li><a href="https://drive.google.com/file/d/16nD-QRwAq4VP413rGJso5tc-NOfXVjNA/view?usp=sharing" style="color: blue;">8 week checklist</a></li>
+        <li><a href="https://drive.google.com/file/d/1K1LvKv7fK19kSYho7jiuKC_4H71A8QjY/view?usp=sharing" style="color: blue;">16 week checklist</a></li>
       </ul>
 
       <ul style="margin-top: 20px;">
@@ -484,11 +484,7 @@ a:hover {
       How to Access Templates on SL&L
     </a>
   </li>
-  <li>
-    <a href="https://drive.google.com/file/d/1R35GUePZ6kXNulrrPbgNLa1KlMHqEKGp/view?usp=sharing" target="_blank" style="color: #0000EE;">
-      edTPA Quick Start Guide - Registration, Uploading, and Submission Assistance
-    </a>
-  </li>
+  
 </ul>
 </section>
 
@@ -519,7 +515,7 @@ a:hover {
  <h3>Forms</h3>
       <ul>
         <li><a href="https://drive.google.com/file/d/1mJN2zc6oYAxIFiIqE4A9olL6vSxVr5pe/view?usp=sharing" style="color: blue;">edTPA Verification Form</a></li>
-        <li><a href="#" style="color: blue;"> Parent Consent and Release Form</a></li>
+        <li><a href=" https://drive.google.com/file/d/1jtHKS3vJxCcHYfxK48-svtf6kspx9FLg/view" style="color: blue;"> Parent Consent and Release Form</a></li>
       </ul>
     </div>
 
@@ -527,7 +523,6 @@ a:hover {
     <div style="flex: 1; min-width: 250px;">
       <h3>Resources</h3>
       <ul>
-        <li><a href="https://drive.google.com/file/d/1fnQbHNdrkbfNmHBvLdZIUQXBqXahb6vp/view" style="color: blue;">Making Good Choices</a></li>
         <li><a href="https://drive.google.com/file/d/1oBxGdmiUGv7yAqpWnL4nwKynDJk7o4xB/view" style="color: blue;">Confidentiality and Security</a></li>
         <li><a href="https://drive.google.com/file/d/1XryoxnCyU8YMyDmT21yU1za8l0GDtR6m/view" style="color: blue;">Video Confidentiality Candidates</a></li>
       </ul>
