updated links for 8 and 16 week schedule

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 <h2>Student Teaching Responsibilities</h2>
 <p style="color: green; font-weight: bold;"><em>DOWNLOAD TO PRINT</em></p>
 <p>
-<a href="#" style="color: blue; font-weight: bold;">
+<a href="https://drive.google.com/file/d/1IRhz5majiNw-5K8iHomU8s32JAFM6xWB/view?usp=sharing" style="color: blue; font-weight: bold;">
       Student Teaching Responsibilities and Requirements
     </a>
 </p>
@@ -111,8 +111,8 @@
 <div style="flex: 1; min-width: 280px;">
 <h3 style="color: red;">Instruction, Observation, and Evaluation Schedule</h3>
 <ul>
-<li><a href="https://drive.google.com/file/d/1K1LvKv7fK19kSYho7jiuKC_4H71A8QjY/view?usp=sharing" style="color: blue;">AYA/SPED/MUSIC 16 week schedule</a></li>
-<li><a href="https://drive.google.com/file/d/16nD-QRwAq4VP413rGJso5tc-NOfXVjNA/view?usp=sharing" style="color: blue;">MCE/ELIS/ART 8 week schedule</a></li>
+<li><a href="https://drive.google.com/file/d/1G6w-NfUKHJuz3Rr-0_bm-RGMCm21Wtwc/view?usp=sharing" style="color: blue;">AYA/SPED/MUSIC 16 week schedule</a></li>
+<li><a href="https://drive.google.com/file/d/1n0b518Uzu9931YGfnKH8aKCpY9aUeFeF/view?usp=sharing" style="color: blue;">MCE/ELIS/ART 8 week schedule</a></li>
 </ul>
 <ul>
 <li><a href="https://drive.google.com/file/d/10ROBU9mTjob9trg7PzYzUk3edklLYKMv/view?usp=sharing" style="color: blue;">Student Teaching Dress Code</a></li>
@@ -230,8 +230,8 @@
 <div style="flex: 1; min-width: 280px;">
 <h3 style="color: darkorange;">Observation Evaluation Schedule</h3>
 <ul>
-<li><a href="https://drive.google.com/file/d/16nD-QRwAq4VP413rGJso5tc-NOfXVjNA/view?usp=sharing" style="color: blue;">MCE/ELIS/ART: 8 week schedule</a></li>
-<li><a href="https://drive.google.com/file/d/1K1LvKv7fK19kSYho7jiuKC_4H71A8QjY/view?usp=sharing" style="color: blue;">AYA/SPED/MUSIC: 16 week schedule</a></li>
+<li><a href="https://drive.google.com/file/d/1n0b518Uzu9931YGfnKH8aKCpY9aUeFeF/view?usp=sharing" style="color: blue;">MCE/ELIS/ART: 8 week schedule</a></li>
+<li><a href="https://drive.google.com/file/d/1G6w-NfUKHJuz3Rr-0_bm-RGMCm21Wtwc/view?usp=sharing" style="color: blue;">AYA/SPED/MUSIC: 16 week schedule</a></li>
 <li><a href="https://drive.google.com/file/d/1B4vAwGAfApaIuHp2bux6zG5iSxrwYUgg/view" style="color: blue;">Observation Form</a></li>
 </ul>
 </div>
@@ -245,8 +245,8 @@
 <div style="flex: 1; min-width: 300px;">
 <h3 style="color: darkorange;">Observation and Evaluation Schedule</h3>
 <ul>
-<li>MCE/ELIS/ART: <a href="https://drive.google.com/file/d/16nD-QRwAq4VP413rGJso5tc-NOfXVjNA/view?usp=sharing" style="color: blue;">8 week schedule</a></li>
-<li>AYA/SPED/MUSIC: <a href="https://drive.google.com/file/d/1K1LvKv7fK19kSYho7jiuKC_4H71A8QjY/view?usp=sharing" style="color: blue;">16 week schedule</a></li>
+<li>MCE/ELIS/ART: <a href="https://drive.google.com/file/d/1n0b518Uzu9931YGfnKH8aKCpY9aUeFeF/view?usp=sharing" style="color: blue;">8 week schedule</a></li>
+<li>AYA/SPED/MUSIC: <a href="https://drive.google.com/file/d/1G6w-NfUKHJuz3Rr-0_bm-RGMCm21Wtwc/view?usp=sharing" style="color: blue;">16 week schedule</a></li>
 <li><a href="Handbooks/ST_Handbook_2025_2026.pdf" style="color: blue;">Guidelines for Student Teaching handbook</a></li>
 </ul>
 <ul style="margin-top: 20px;">
