Updated some the sections: Student teaching responsibilities and university supervisor form

--- a/index.html
+++ b/index.html
@@ -64,24 +64,36 @@
       Student Teaching Responsibilities and Requirements
     </a>
 </p>
-<p style="color: green; font-weight: bold;">
-    Required to complete the following, on SL&amp;L, by the end of orientation
+    <p style="color: green; font-weight: bold;">Required to complete the following on SL&L:</p>
+  <p><span style="color: orange;">Student Learning and Licensure</span><br>
+    <a href="https://sll.watermarkinsights.com" style="color: blue;">To access SL&L</a>
   </p>
-<ul style="list-style-type: circle; margin-left: 20px;">
-<li><p style="color: blue;">Social Media Acknowledgement</p></li>
-<li><p style="color: blue;">Professionalism Acknowledgement</p></li>
-<li><p style="color: blue;">Licensure Information and Timelines</p></li>
-<li><p style="color: blue;">ST Orientation Evaluation</p></li>
-<li>
-<p style="color: blue;">Educators and the Opioid Crisis V2 upload score report to Sl&amp;L DRF Student Teaching Unit</p><br/>
-<a href="https://osuehe.catalog.instructure.com" style="color: rgb(117, 117, 125);">https://osuehe.catalog.instructure.com/courses/educators-and-the-opioid-crisis</a>
 
-</li>
-</ul>
-<p style="color: green; font-weight: bold;">
-    Required to complete the CPAST module, on Blackboard, by the end of orientation.<br/>
-<span style="font-weight: normal;">Minimum of 80% accuracy required on each module.</span>
-</p>
+  <h3 style="color: green;">To Be Completed or Submitted</h3>
+  <ul style="list-style-type: circle; margin-left: 20px;">
+    <li>ST Acknowledgements – read and initial</li>
+    <li>STATE REQUIREMENTS (modules and ODHE survey) Upload score report; Survey information will be provided later</li>
+    <li>Weekly Progress Logs 1a-8a (1<sup>st</sup> 8 weeks) – submitted individually</li>
+    <li>Weekly Progress Logs 1b-8b (2<sup>nd</sup> 8 weeks) – submitted individually</li>
+    <li>CT Observations 1a-3a (1<sup>st</sup> 8 weeks) – one submission for all</li>
+    <li>US Observations 1a-3a (1<sup>st</sup> 8 weeks) – one submission for all</li>
+    <li>CT Observations 1b-3b (2<sup>nd</sup> 8 weeks) – one submission for all</li>
+    <li>US Observations 1b-3b (2<sup>nd</sup> 8 weeks) – one submission for all</li>
+    <li>CPAST Pedagogy (1<sup>st</sup> 8 weeks) – You will complete a midterm reflection then your supervisor will input your scores.</li>
+    <li>CPAST Pedagogy (2<sup>nd</sup> 8 weeks) – You will complete a field verification form then your supervisor will input your scores.</li>
+  </ul>
+
+  <h3 style="color: green;">State Required Modules</h3>
+  <p>Ohio State mandated a transition to a new platform and added a $5 charge for each module. The two state modules you are required to complete are at the following “evergreen” links:</p>
+  <ul>
+    <li><a href="https://reg-continuinged.osu.edu/search/publicCourseSearchDetails.do?method=load&courseId=1168282&sectionId=1168284&showInternal=true" style="color: blue;">Ohio Standards for Education Preparation course</a></li>
+    <li><a href="https://reg-continuinged.osu.edu/search/publicCourseSearchDetails.do?method=load&courseId=1172080&sectionId=1179811&showInternal=true" style="color: blue;">Computer Science and Computational Thinking course</a></li>
+  </ul>
+
+  <h3 style="color: green;">CPAST Module on Blackboard</h3>
+  <p>Go to <a href="https://ysu.blackboard.com" style="color: blue;">[ysu.blackboard.com]</a> Blackboard and sign in. On the institution homepage, scroll to “Student Resources and Blackboard Self Enroll Courses” and click on BCLASSE STUS CPAST.  
+    You will need an 80% on the assessment in chapter 2 to be able to move to chapter 3. Minimum of 80% accuracy is required to complete the entire CPAST Module.
+  </p>
 </section>
 <section class="section" id="dates">
 <h2>Important Dates and Information</h2>
@@ -253,7 +265,11 @@
 <li><a href="https://drive.google.com/file/d/1-a2Q93bGPH0T7C_1IVBMeQ3lh_l3Yb3S/view" style="color: blue;">Travel Mileage Log – Concur users only</a></li>
 <li><a href="https://docs.google.com/document/d/1iaOSRFIwISiU29BmLapMSAVkM0vKdyNy/edit?tab=t.0" style="color: blue;">University Supervisor Travel Summary</a></li>
 </ul>
+<h3 style="color: darkorange;">Student Learning and Licensure</h3>
+    <a href="https://sll.watermarkinsights.com" style="color: blue;">To access SL&L</a>
+
 </div>
+
 <div style="flex: 1; min-width: 280px;">
 <h3 style="color: darkorange;">Checklists</h3>
 <ul>
