--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
 <!-- Right: Narrative/PowerPoint/EDA -->
 <div style="flex: 0.6; min-width: 250px; background-color: white; padding: 15px; margin-top: 45px;">
 <strong><a href="#" style="color: blue;">Narrative </a></strong><br/><br/>
-<strong><a href="#" style="color: blue;"> Power Point </a></strong><br/><br/>
+<strong><a href="https://docs.google.com/presentation/d/1Ge_HVHIeClVAsr_3SRIMtnk7v_lbYyqj/edit?usp=sharing&ouid=118017305957131777595&rtpof=true&sd=true" style="color: blue;"> Power Point </a></strong><br/><br/>
 <strong><a href="https://docs.google.com/presentation/d/1-cN0SvnIOc4HEPR-knjZ7PJtS7rNINxg/edit?usp=sharing&amp;ouid=118017305957131777595&amp;rtpof=true&amp;sd=true" style="color: blue;">EDA Information</a></strong>
 </div>
 </div>
