--- a/index.html
+++ b/index.html
@@ -64,12 +64,14 @@
       Student Teaching Responsibilities and Requirements
     </a>
 </p>
-    <p style="color: green; font-weight: bold;">Required to complete the following on SL&L:</p>
-  <p><span style="color: orange;">Student Learning and Licensure</span><br>
+  
+    <p><span style="color: orange;">Student Learning and Licensure</span><br>
     <a href="https://sll.watermarkinsights.com" style="color: blue;">To access SL&L</a>
+        <p style="color: green; font-weight: bold;">Required to complete the following on SL&L:</p>
+
   </p>
 
-  <h3 style="color: green;">To Be Completed or Submitted</h3>
+  <h3 style="color: green;">To Be Completed or Submitted on SL&L</h3>
   <ul style="list-style-type: circle; margin-left: 20px;">
     <li>ST Acknowledgements – read and initial</li>
     <li>STATE REQUIREMENTS (modules and ODHE survey) Upload score report; Survey information will be provided later</li>
@@ -85,12 +87,14 @@
 
   <h3 style="color: green;">State Required Modules</h3>
   <p>Ohio State mandated a transition to a new platform and added a $5 charge for each module. The two state modules you are required to complete are at the following “evergreen” links:</p>
+  <p>You need to submit your score report for each module on SL&L</p>
   <ul>
     <li><a href="https://reg-continuinged.osu.edu/search/publicCourseSearchDetails.do?method=load&courseId=1168282&sectionId=1168284&showInternal=true" style="color: blue;">Ohio Standards for Education Preparation course</a></li>
     <li><a href="https://reg-continuinged.osu.edu/search/publicCourseSearchDetails.do?method=load&courseId=1172080&sectionId=1179811&showInternal=true" style="color: blue;">Computer Science and Computational Thinking course</a></li>
   </ul>
 
   <h3 style="color: green;">CPAST Module on Blackboard</h3>
+  <p>You have been enrolled in STUS CPAST</p>
   <p>Go to <a href="https://ysu.blackboard.com" style="color: blue;">[ysu.blackboard.com]</a> Blackboard and sign in. On the institution homepage, scroll to “Student Resources and Blackboard Self Enroll Courses” and click on BCLASSE STUS CPAST.  
     You will need an 80% on the assessment in chapter 2 to be able to move to chapter 3. Minimum of 80% accuracy is required to complete the entire CPAST Module.
   </p>
@@ -103,7 +107,7 @@
 <div style="flex: 1; min-width: 280px;">
 <h3 style="color: red;">Important Information</h3>
 <ul>
-<li><a href="https://drive.google.com/file/d/1W11qkU75j3dnBD4j7rk3scJoRWc6ZAkH/view?usp=sharing" style="color: blue;">Orientation Schedule</a></li>
+<li><a href="https://drive.google.com/file/d/1omttLxdFUUEVy4ktETHEPS4Z-OyjK_9D/view?usp=sharing" style="color: blue;">Orientation Schedule</a></li>
 <li><a href="https://docs.google.com/document/d/1gH2wSo4JYxhbn0ex1wK7Zq-kRnnKvHGZ/edit?tab=t.0" style="color: blue;">Resume Template</a></li>
 <li><a href="Handbooks/ST_Handbook_2025_2026-2.pdf" style="font-style: italic; color: blue;">Guidelines for Student Teaching handbook</a></li>
 </ul>
@@ -111,7 +115,7 @@
 <ul>
 <li>
 <span style="color: blue; font-weight: bold;">TCESC Schedule</span><br/>
-<span>Wednesday, August 13, 2025<br/>
+<span>Tuesday , December 16, 2025<br/>
           7:45am - 3:45pm<br/>
           Trumbull County Educational Service Center<br/>
           6000 Youngstown-Warren Rd.<br/>
@@ -123,8 +127,8 @@
 <div style="flex: 1; min-width: 280px;">
 <h3 style="color: red;">Instruction, Observation, and Evaluation Schedule</h3>
 <ul>
-<li><a href="https://drive.google.com/file/d/1G6w-NfUKHJuz3Rr-0_bm-RGMCm21Wtwc/view?usp=sharing" style="color: blue;">AYA/SPED/MUSIC 16 week schedule</a></li>
-<li><a href="https://drive.google.com/file/d/1n0b518Uzu9931YGfnKH8aKCpY9aUeFeF/view?usp=sharing" style="color: blue;">MCE/ELIS/ART 8 week schedule</a></li>
+<li><a href="https://drive.google.com/file/d/1EYBTCq4xyP3UtOBH08C8NNNImA5LYYYw/view?usp=sharing" style="color: blue;">AYA/MUSIC/SPED 16 week schedule</a></li>
+<li><a href="https://drive.google.com/file/d/1-N2-oS-E7Yce8vVdo0-lQrIxG39N5o3G/view?usp=sharing" style="color: blue;">AYA-SPED/MCE/ELIS/ART 8 week schedule</a></li>
 </ul>
 <ul>
 <li><a href="https://drive.google.com/file/d/10ROBU9mTjob9trg7PzYzUk3edklLYKMv/view?usp=sharing" style="color: blue;">Student Teaching Dress Code</a></li>
@@ -164,6 +168,8 @@
 <li><a href="https://drive.google.com/file/d/1yx7BH0QCNMfAZZxgXY2IjL6teJRHyW3h/view?usp=sharing" style="color: blue;">ST Absentee Form</a></li>
 <li><a href="https://drive.google.com/file/d/13FvS5exivNMZSJjb2nsOgNFLCfTtm0Ta/view" style="color: blue;"> Parent Teacher Conference Verification</a></li>
 <li><a href="https://docs.google.com/document/d/1R8aFCkXY6N5Aa6rtC_A4FHaflqdSbcw8/edit?tab=t.0" style="color: blue;">Weekly Progress Log</a></li>
+<li><a href="https://drive.google.com/file/d/1LuMCpyb9pm8M5VNTb639xX41mIqz1EE5/view?usp=sharing" style="color: blue;">Collaboration Acknowledgement</a></li>
+
 </ul>
 <h3 style="font-weight: bold; margin-top: 20px;">Seminar Forms</h3>
 <ul style="list-style-type: disc; padding-left: 20px;">
@@ -198,16 +204,16 @@
 <div style="background-color: white; padding: 10px; margin: 10px 0;">
 <p style="color: #c92c2c; font-weight: bold;">
           Cooperating Teacher Meeting<br/>
-          Thursday, September 18, 2025, 3:30-5pm
+          Wednesday, January 21, 2026, 3:30-5pm
         </p>
-<p>
+<p> 
 <a href="https://ysu.webex.com/meet/takightlinger" style="color: blue;">https://ysu.webex.com/meet/takightlinger</a>
 </p>
 <h4>Office Hours</h4>
 <ul>
-<li>Mon., October 13 — 3:00-5:00pm</li>
-<li>Tue., November 11— 7:15-8:00am</li>
-<li>Mon., December 1 — 3:00-5:00pm</li>
+<li>Wed., February 11 — 7:30am-8:30am</li>
+<li>Tue., March 16— 3:00pm-5:00pm</li>
+<li>Mon., April 15 — 3:00-5:00pm</li>
 </ul>
 <p>Other times available by appointment, email:<br/>
 <a href="mailto:takightlinger@ysu.edu" style="color: blue;">takightlinger@ysu.edu</a>
@@ -217,7 +223,7 @@
 <!-- Right: Narrative/PowerPoint/EDA -->
 <div style="flex: 0.6; min-width: 250px; background-color: white; padding: 15px; margin-top: 45px;">
 <strong><a href="#" style="color: blue;">Narrative </a></strong><br/><br/>
-<strong><a href="https://docs.google.com/presentation/d/1Ge_HVHIeClVAsr_3SRIMtnk7v_lbYyqj/edit?usp=sharing&ouid=118017305957131777595&rtpof=true&sd=true" style="color: blue;"> Power Point </a></strong><br/><br/>
+<strong><a href="" style="color: blue;"> Power Point </a></strong><br/><br/>
 <strong><a href="https://docs.google.com/presentation/d/1-cN0SvnIOc4HEPR-knjZ7PJtS7rNINxg/edit?usp=sharing&amp;ouid=118017305957131777595&amp;rtpof=true&amp;sd=true" style="color: blue;">EDA Information</a></strong>
 </div>
 </div>
@@ -233,7 +239,7 @@
 <li><a href="https://drive.google.com/file/d/1eCvxEiVirFT04WgBgu9kISAQrHu-a-NX/view?usp=sharing" style="color: blue;">Guidelines for Student Teaching handbook</a></li>
 <li>
 <a href="https://drive.google.com/file/d/1doav1TEs9OIdeMTmEwwrUTAL_OdZR33f/view" style="color: blue;">Outstanding Performance Award Form</a>
-<p style="color: red; font-weight: bold; margin-top: 0;">Due November 17, 2025 by 4:00pm</p>
+<p style="color: red; font-weight: bold; margin-top: 0;">Due April 13, 2026 by 4:00pm</p>
 
 </li>
 </ul>
@@ -242,8 +248,8 @@
 <div style="flex: 1; min-width: 280px;">
 <h3 style="color: darkorange;">Observation Evaluation Schedule</h3>
 <ul>
-<li><a href="https://drive.google.com/file/d/1n0b518Uzu9931YGfnKH8aKCpY9aUeFeF/view?usp=sharing" style="color: blue;">MCE/ELIS/ART: 8 week schedule</a></li>
-<li><a href="https://drive.google.com/file/d/1G6w-NfUKHJuz3Rr-0_bm-RGMCm21Wtwc/view?usp=sharing" style="color: blue;">AYA/SPED/MUSIC: 16 week schedule</a></li>
+<li><a href="https://drive.google.com/file/d/1-N2-oS-E7Yce8vVdo0-lQrIxG39N5o3G/view?usp=sharing" style="color: blue;">AYA-SPED/MCE/ELIS/ART: 8 week schedule</a></li>
+<li><a href="https://drive.google.com/file/d/1EYBTCq4xyP3UtOBH08C8NNNImA5LYYYw/view?usp=sharing" style="color: blue;">AYA/MUSIC/SPED: 16 week schedule</a></li>
 <li><a href="https://drive.google.com/file/d/1B4vAwGAfApaIuHp2bux6zG5iSxrwYUgg/view" style="color: blue;">Observation Form</a></li>
 </ul>
 </div>
@@ -257,8 +263,8 @@
 <div style="flex: 1; min-width: 300px;">
 <h3 style="color: darkorange;">Observation and Evaluation Schedule</h3>
 <ul>
-<li>MCE/ELIS/ART: <a href="https://drive.google.com/file/d/1n0b518Uzu9931YGfnKH8aKCpY9aUeFeF/view?usp=sharing" style="color: blue;">8 week schedule</a></li>
-<li>AYA/SPED/MUSIC: <a href="https://drive.google.com/file/d/1G6w-NfUKHJuz3Rr-0_bm-RGMCm21Wtwc/view?usp=sharing" style="color: blue;">16 week schedule</a></li>
+<li>AYA-SPED/MCE/ELIS/ART: <a href="https://drive.google.com/file/d/1n0b518Uzu9931YGfnKH8aKCpY9aUeFeF/view?usp=sharing" style="color: blue;">8 week schedule</a></li>
+<li>AYA/MUSIC/SPED: <a href="https://drive.google.com/file/d/1G6w-NfUKHJuz3Rr-0_bm-RGMCm21Wtwc/view?usp=sharing" style="color: blue;">16 week schedule</a></li>
 <li><a href="Handbooks/ST_Handbook_2025_2026-2.pdf" style="color: blue;">Guidelines for Student Teaching handbook</a></li>
 </ul>
 <ul style="margin-top: 20px;">
@@ -279,7 +285,7 @@
 <ul style="margin-top: 20px;">
 <li>
 <a href="https://drive.google.com/file/d/1doav1TEs9OIdeMTmEwwrUTAL_OdZR33f/view" style="color: blue;">Outstanding Performance Award Form<br/></a>
-<span style="color: red;">Due November 17, 2025 by 4:00pm</span>
+<span style="color: red;">Due April 13, 2026 by 4:00pm</span>
 
 </li>
 </ul>
@@ -288,22 +294,21 @@
 </section>
 <section class="section" id="edtpa">
 <h2>edTPA Information</h2>
-<p style="color: red;"><strong>TPA Due:</strong> October 30, 2025</p>
-<p style="color: red;"><strong>TPA Scores:</strong> November 26, 2025</p>
-<h3 style="color: blue;">TPA VOUCHER APPOINTMENT<br/>October 6-8, 2025</h3>
+<p style="color: red;"><strong>TPA Due:</strong> March 12, 2026</p>
+<p style="color: red;"><strong>TPA Scores:</strong> April 9, 2026</p>
+<h3 style="color: blue;">TPA VOUCHER APPOINTMENT<br/>February 9-12, 2026</h3>
 <p><strong>REQUIRED</strong> in order to submit TPA on Pearson</p>
 <p>Voucher appointments are for:</p>
 <ul>
-<li><span style="color: blue;">Music and Art</span> – <span style="color: red;">October 6</span> 8am - 6pm</li>
-<li><span style="color: blue;">Primary and SPED</span> – <span style="color: red;">October 7</span> 8am - 6pm</li>
-<li><span style="color: blue;">AYA and MCE</span> – <span style="color: red;">October 8</span> 8am - 6pm</li>
+<li><span style="color: blue;">Primary and SPED</span> – <span style="color: red;">February 9-10</span> 8am - 6pm</li>
+<li><span style="color: blue;">AYA and MCE</span> – <span style="color: red;">February 11-12</span> 8am - 6pm</li>
+<li><span style="color: blue;">Music and Art</span> – <span style="color: red;">February 11-12</span> 8am - 6pm</li>
 </ul>
 <p>Earlier appointments available upon request</p>
 <p style="color: red; font-weight: bold;">Excused from placement for appointment ONLY</p>
 <p>Appointments will be held in Beeghly Hall, room 3310</p>
 <p>For appointment, <span style="text-decoration: underline; color: blue;">all Task 1 uploaded</span>, NOT submitted, on SL&amp;L</p>
-<p><strong>Contact Mrs. Kightlinger:</strong> <a href="mailto:takightlinger@ysu.edu" style="color: blue;">takightlinger@ysu.edu</a></p>
-<p style="color: green;">Video and submission assistance available upon request</p>
+  <p style="color: green;">Video and submission assistance available upon request</p>
 <hr/>
 <h3 style="margin-top: 30px;">edTPA Resources</h3>
 <ul>
