--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <link href="style.css" rel="stylesheet"/><script defer="True" src="script.js"></script></head>
 <body onload="checkPassword()">
-<div class="container protected" id="protected-content">
+'c<div class="container protected" id="protected-content">
 <div class="sidebar">
 <a class="active" data-target="home" onclick="showSection('home')">Home</a>
 <a data-target="co-teaching" onclick="showSection('co-teaching')">Co-Teaching</a>
@@ -67,11 +67,10 @@
   
     <p><span style="color: orange;">Student Learning and Licensure</span><br>
     <a href="https://sll.watermarkinsights.com" style="color: blue;">To access SL&L</a>
-        <p style="color: green; font-weight: bold;">Required to complete the following on SL&L:</p>
-
+        
   </p>
 
-  <h3 style="color: green;">To Be Completed or Submitted on SL&L</h3>
+  <h3 style="color: green;">Required to complete the following on SL&L:</h3>
   <ul style="list-style-type: circle; margin-left: 20px;">
     <li>ST Acknowledgements – read and initial</li>
     <li>STATE REQUIREMENTS (modules and ODHE survey) Upload score report; Survey information will be provided later</li>
@@ -94,8 +93,7 @@
   </ul>
 
   <h3 style="color: green;">CPAST Module on Blackboard</h3>
-  <p>You have been enrolled in STUS CPAST</p>
-  <p>Go to <a href="https://ysu.blackboard.com" style="color: blue;">[ysu.blackboard.com]</a> Blackboard and sign in. On the institution homepage, scroll to “Student Resources and Blackboard Self Enroll Courses” and click on BCLASSE STUS CPAST.  
+  <p>You have been enrolled in STUS CPAST. Go to <a href="https://ysu.blackboard.com" style="color: blue;">[ysu.blackboard.com]</a> Blackboard and sign in.
     You will need an 80% on the assessment in chapter 2 to be able to move to chapter 3. Minimum of 80% accuracy is required to complete the entire CPAST Module.
   </p>
 </section>
@@ -263,8 +261,8 @@
 <div style="flex: 1; min-width: 300px;">
 <h3 style="color: darkorange;">Observation and Evaluation Schedule</h3>
 <ul>
-<li>AYA-SPED/MCE/ELIS/ART: <a href="https://drive.google.com/file/d/1n0b518Uzu9931YGfnKH8aKCpY9aUeFeF/view?usp=sharing" style="color: blue;">8 week schedule</a></li>
-<li>AYA/MUSIC/SPED: <a href="https://drive.google.com/file/d/1G6w-NfUKHJuz3Rr-0_bm-RGMCm21Wtwc/view?usp=sharing" style="color: blue;">16 week schedule</a></li>
+<li>AYA-SPED/MCE/ELIS/ART: <a href="https://drive.google.com/file/d/1-N2-oS-E7Yce8vVdo0-lQrIxG39N5o3G/view?usp=sharing" style="color: blue;">8 week schedule</a></li>
+<li>AYA/MUSIC/SPED: <a href="https://drive.google.com/file/d/1EYBTCq4xyP3UtOBH08C8NNNImA5LYYYw/view?usp=sharing" style="color: blue;">16 week schedule</a></li>
 <li><a href="Handbooks/ST_Handbook_2025_2026-2.pdf" style="color: blue;">Guidelines for Student Teaching handbook</a></li>
 </ul>
 <ul style="margin-top: 20px;">
